--- a/src/main/resources/static/html/Vendor.html
+++ b/src/main/resources/static/html/Vendor.html
@@ -14,17 +14,17 @@
 
 <br><br>
 <div class="form-group col-xs-6">
-<label>TIN No.</label> <input type="text" class="form-control" name="vendor" value="" ng-model="newVendorDetails.tinNo"></div>
+<label>TIN No.</label> <input type="text" class="form-control" name="vendor" value="" ng-model="newVendorDetails.tinNum"></div>
 
 <div class="form-group col-xs-6">
-<label>Stat No. </label><input type="text" class="form-control" name="vendorName" ng-model="newVendorDetails.statNo"></div>
+<label>Stat No. </label><input type="text" class="form-control" name="vendorName" ng-model="newVendorDetails.statNum"></div>
 
 <br><br>
 <div class="form-group col-xs-6">
-<label>CST No.</label> <input type="text" class="form-control" name="vendor" value="" ng-model="newVendorDetails.cstNo"></div>
+<label>CST No.</label> <input type="text" class="form-control" name="vendor" value="" ng-model="newVendorDetails.cstNum"></div>
 
 <div class="form-group col-xs-6">
-<label>PAN No.</label><input type="text" class="form-control" name="vendorName" ng-model="newVendorDetails.panNo">
+<label>PAN No.</label><input type="text" class="form-control" name="vendorName" ng-model="newVendorDetails.panNum">
 </div>
 <br><br>
 <br><br>
@@ -34,14 +34,14 @@
 <label>Person Name:</label> <input type="text" class="form-control" name="vendor" value="" ng-model="newVendorDetails.personName"></div>
 
 <div class="form-group col-xs-6">
-<label>Mobile Number: </label><input type="text" class="form-control" name="vendorName" ng-model="newVendorDetails.mobileNumber"></div>
+<label>Mobile Number: </label><input type="text" class="form-control" name="vendorName" ng-model="newVendorDetails.mobileNum"></div>
 
 <br><br>
 <div class="form-group col-xs-6">
-<label>Work No.</label> <input type="text" class="form-control" name="vendor" value="" ng-model="newVendorDetails.workNo" ></div>
+<label>Work No.</label> <input type="text" class="form-control" name="vendor" value="" ng-model="newVendorDetails.workNum" ></div>
 
 <div class="form-group col-xs-6">
-<label>Home No. </label><input type="text" class="form-control" name="vendorName" ng-model="newVendorDetails.homeNo"></div>
+<label>Home No. </label><input type="text" class="form-control" name="vendorName" ng-model="newVendorDetails.homeNum"></div>
 <br><br>
 <br><br>
 
